--- a/style.css
+++ b/style.css
@@ -32,7 +32,6 @@ header {
 .nav-list {
   float: right;
   font-size: 16px;
-  color: #FAFAFA;
   line-height: 70px;
 }
 
@@ -40,6 +39,8 @@ header {
   list-style: none;
   display: inline-block;
   margin: 0 30px;
+  color: #FAFAFA;
+  text-decoration: none;
 }
 
 .header-hanberger {
